# sinodude

./: .gitignore  Cargo.toml  README.md  flake.nix  rust-toolchain.toml
.github/workflows/: push.yml
ee/: .gitignore
ee/sinodude/: sinodude.kicad_prl  sinodude.kicad_pro  sinodude.kicad_sch
firmware/: Cargo.toml  README.md  Ravedude.toml
firmware/.cargo/: config.toml
firmware/src/: main.rs
src/: gpt.rs  main.rs  part.rs  sinolink.rs
src/parts/: adc2015.rs  ch6935a.rs  cm7916.rs  gs16lf601.rs  gs16lf602a.rs  gs16lf603a.rs  gs16lf606.rs  gs16lf607.rs  gs16lf608.rs  gs16lf609a.rs  gs16lf611.rs  gs16lf612.rs  gs16lf614.rs  gs16lf615.rs  gs16lf616.rs  gs16lf617.rs  hea08f20.rs  hea08f28a.rs  hp60207.rs  hp60307.rs  hp60405.rs  hp60908.rs  jym0532.rs  jym0564.rs  mcf8014.rs  md001.rs  mod.rs  ps2024.rs  qf9408.rs  sh366002.rs  sh366006.rs  sh39f003.rs  sh39f003a.rs  sh39f004.rs  sh39f005.rs  sh39f323.rs  sh39f323a.rs  sh39f323c.rs  sh39f325.rs  sh39f325a.rs  (+264 more)
src/programmer/: keyboard.rs  mod.rs  serial.rs  sinodude_serial.rs  sinolink.rs
utils/: generate-parts.sh
utils/generate-part/: Cargo.toml
utils/generate-part/parts/: sh68f90a.rs
utils/generate-part/src/: main.rs
