[package]
name = "sinodude"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
nusb = "0.2"
futures-lite = "2.6"
hex-literal = "1.1"
clap = "4.5"
chrono = "0.4"
phf = { version = "0.13", features = ["macros"] }
ihex = "3.0"
thiserror = "2.0"
md5 = "0.8"
log = { version = "0.4", features = ["max_level_debug"] }
simple_logger = { version = "5.1", default-features = false, features = ["stderr", "colors", "timestamps"] }
serialport = "4.6"
indicatif = "0.17"
indexmap = "2.7"
